--- a/requirements.txt
+++ b/requirements.txt
@@ -10,19 +10,19 @@ async-timeout==4.0.3 ; python_version >= "3.11" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.11" and python_version < "4.0"
 beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "4.0"
 bs4==0.0.2 ; python_version >= "3.11" and python_version < "4.0"
-cachetools==5.3.2 ; python_version >= "3.11" and python_version < "4.0"
+cachetools==5.3.3 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2024.2.2 ; python_version >= "3.11" and python_version < "4.0"
 cffi==1.16.0 ; python_version >= "3.11" and python_version < "4.0" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
 click-default-group==1.2.4 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
-cryptography==42.0.3 ; python_version >= "3.11" and python_version < "4.0"
+cryptography==42.0.5 ; python_version >= "3.11" and python_version < "4.0"
 dataclasses-json==0.6.4 ; python_version >= "3.11" and python_version < "4.0"
 dill==0.3.8 ; python_version >= "3.11" and python_version < "4.0"
 distro==1.9.0 ; python_version >= "3.11" and python_version < "4.0"
 docstring-parser==0.15 ; python_version >= "3.11" and python_version < "4.0"
-faiss-cpu==1.7.4 ; python_version >= "3.11" and python_version < "4.0"
+faiss-cpu==1.8.0 ; python_version >= "3.11" and python_version < "4.0"
 fastapi==0.109.2 ; python_version >= "3.11" and python_version < "4.0"
 filelock==3.13.1 ; python_version >= "3.11" and python_version < "4.0"
 frozendict==2.4.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -31,23 +31,23 @@ fsspec==2024.2.0 ; python_version >= "3.11" and python_version < "4.0"
 google-ai-generativelanguage==0.4.0 ; python_version >= "3.11" and python_version < "4.0"
 google-api-core==2.17.1 ; python_version >= "3.11" and python_version < "4.0"
 google-api-core[grpc]==2.17.1 ; python_version >= "3.11" and python_version < "4.0"
-google-auth==2.28.0 ; python_version >= "3.11" and python_version < "4.0"
+google-auth==2.28.1 ; python_version >= "3.11" and python_version < "4.0"
 google-generativeai==0.3.2 ; python_version >= "3.11" and python_version < "4.0"
 googleapis-common-protos==1.62.0 ; python_version >= "3.11" and python_version < "4.0"
 googlesearch-python==1.2.3 ; python_version >= "3.11" and python_version < "4.0"
 greenlet==3.0.3 ; python_version >= "3.11" and python_version < "4.0"
-grpcio-status==1.60.1 ; python_version >= "3.11" and python_version < "4.0"
-grpcio==1.60.1 ; python_version >= "3.11" and python_version < "4.0"
+grpcio-status==1.62.0 ; python_version >= "3.11" and python_version < "4.0"
+grpcio==1.62.0 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.11" and python_version < "4.0"
-httpcore==1.0.3 ; python_version >= "3.11" and python_version < "4.0"
+httpcore==1.0.4 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.25.2 ; python_version >= "3.11" and python_version < "4.0"
-huggingface-hub==0.20.3 ; python_version >= "3.11" and python_version < "4.0"
+huggingface-hub==0.21.3 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
 jinja2==3.1.3 ; python_version >= "3.11" and python_version < "4.0"
 joblib==1.3.2 ; python_version >= "3.11" and python_version < "4.0"
 jsonpatch==1.33 ; python_version >= "3.11" and python_version < "4.0"
-jsonpickle==3.0.2 ; python_version >= "3.11" and python_version < "4.0"
+jsonpickle==3.0.3 ; python_version >= "3.11" and python_version < "4.0"
 jsonpointer==2.4 ; python_version >= "3.11" and python_version < "4.0"
 langchain-community==0.0.17 ; python_version >= "3.11" and python_version < "4.0"
 langchain-core==0.1.19 ; python_version >= "3.11" and python_version < "4.0"
@@ -57,7 +57,7 @@ lxml==5.1.0 ; python_version >= "3.11" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markdownify==0.11.6 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "4.0"
-marshmallow==3.20.2 ; python_version >= "3.11" and python_version < "4.0"
+marshmallow==3.21.0 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
 mistralai==0.0.12 ; python_version >= "3.11" and python_version < "4.0"
 mpmath==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -66,7 +66,6 @@ multitasking==0.0.11 ; python_version >= "3.11" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 nest-asyncio==1.6.0 ; python_version >= "3.11" and python_version < "4.0"
 networkx==3.2.1 ; python_version >= "3.11" and python_version < "4.0"
-nltk==3.8.1 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.26.4 ; python_version >= "3.11" and python_version < "4.0"
 nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
@@ -80,13 +79,12 @@ nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machi
 nvidia-nccl-cu12==2.19.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-nvjitlink-cu12==12.3.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-openai==1.12.0 ; python_version >= "3.11" and python_version < "4.0"
-orjson==3.9.14 ; python_version >= "3.11" and python_version < "4.0"
+openai==1.13.3 ; python_version >= "3.11" and python_version < "4.0"
+orjson==3.9.15 ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
-pandas==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
+pandas==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
 pdf2image==1.17.0 ; python_version >= "3.11" and python_version < "4.0"
 pdfminer-six==20231228 ; python_version >= "3.11" and python_version < "4.0"
-pdfminer==20191125 ; python_version >= "3.11" and python_version < "4.0"
 peewee==3.17.1 ; python_version >= "3.11" and python_version < "4.0"
 pillow==10.2.0 ; python_version >= "3.11" and python_version < "4.0"
 playwright==1.41.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -97,31 +95,29 @@ psutil==5.9.8 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1-modules==0.3.0 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
 pycparser==2.21 ; python_version >= "3.11" and python_version < "4.0" and platform_python_implementation != "PyPy"
-pycryptodome==3.20.0 ; python_version >= "3.11" and python_version < "4.0"
-pydantic-core==2.16.2 ; python_version >= "3.11" and python_version < "4.0"
-pydantic==2.6.1 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-core==2.16.3 ; python_version >= "3.11" and python_version < "4.0"
+pydantic==2.6.3 ; python_version >= "3.11" and python_version < "4.0"
 pyee==11.0.1 ; python_version >= "3.11" and python_version < "4.0"
 pygments==2.17.2 ; python_version >= "3.11" and python_version < "4.0"
 pypdf==4.0.2 ; python_version >= "3.11" and python_version < "4.0"
 pyperclip==1.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pytesseract==0.3.10 ; python_version >= "3.11" and python_version < "4.0"
-python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
+python-dateutil==2.9.0 ; python_version >= "3.11" and python_version < "4.0"
 python-multipart==0.0.6 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
 regex==2023.12.25 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
-rich==13.7.0 ; python_version >= "3.11" and python_version < "4.0"
+rich==13.7.1 ; python_version >= "3.11" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.11" and python_version < "4"
 safetensors==0.4.2 ; python_version >= "3.11" and python_version < "4.0"
 scikit-learn==1.4.1.post1 ; python_version >= "3.11" and python_version < "4.0"
 scipy==1.12.0 ; python_version >= "3.11" and python_version < "4.0"
 sec-api==1.0.17 ; python_version >= "3.11" and python_version < "4.0"
-sentence-transformers==2.3.1 ; python_version >= "3.11" and python_version < "4.0"
-sentencepiece==0.2.0 ; python_version >= "3.11" and python_version < "4.0"
+sentence-transformers==2.5.1 ; python_version >= "3.11" and python_version < "4.0"
 serpapi==0.1.5 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
-sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
+sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
 soupsieve==2.5 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.27 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.36.3 ; python_version >= "3.11" and python_version < "4.0"
@@ -130,11 +126,11 @@ tenacity==8.2.3 ; python_version >= "3.11" and python_version < "4.0"
 threadpoolctl==3.3.0 ; python_version >= "3.11" and python_version < "4.0"
 tiktoken==0.5.2 ; python_version >= "3.11" and python_version < "4.0"
 tokenizers==0.15.2 ; python_version >= "3.11" and python_version < "4.0"
-torch==2.2.0 ; python_version >= "3.11" and python_version < "4.0"
+torch==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
 tqdm==4.66.2 ; python_version >= "3.11" and python_version < "4.0"
-transformers==4.37.2 ; python_version >= "3.11" and python_version < "4.0"
-triton==2.2.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-typing-extensions==4.9.0 ; python_version >= "3.11" and python_version < "4.0"
+transformers==4.38.2 ; python_version >= "3.11" and python_version < "4.0"
+triton==2.2.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.12" and python_version >= "3.11"
+typing-extensions==4.10.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.11" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -143,4 +139,4 @@ wcwidth==0.2.13 ; python_version >= "3.11" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
 wheel==0.42.0 ; python_version >= "3.11" and python_version < "4.0"
 yarl==1.9.4 ; python_version >= "3.11" and python_version < "4.0"
-yfinance==0.2.36 ; python_version >= "3.11" and python_version < "4.0"
+yfinance==0.2.37 ; python_version >= "3.11" and python_version < "4.0"
