--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -39,7 +39,9 @@ helper_functions:
   - llmvm.server.tools.market.MarketHelpers.get_stock_price
   - llmvm.server.tools.market.MarketHelpers.get_current_market_capitalization
   - llmvm.server.tools.market.MarketHelpers.get_stock_volatility
+  - llmvm.server.tools.market.MarketHelpers.get_stock_price_history
   - llmvm.server.bcl.BCL.sample_normal
   - llmvm.server.bcl.BCL.sample_binomial
   - llmvm.server.bcl.BCL.sample_lognormal
   - llmvm.server.bcl.BCL.sample_list
+  - llmvm.server.bcl.BCL.generate_graph_image
