--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,6 +135,7 @@ google-generativeai = "^0.6.0"
 httpx = "0.25.2"
 langchain-huggingface = "^0.0.3"
 matplotlib = "^3.9.0"
+dateparser = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
