--- a/llmvm/config.yaml
+++ b/llmvm/config.yaml
@@ -5,16 +5,8 @@ server_port: 8011
 profiling: false
 profiling_file: '~/.local/share/llmvm/profiling_trace.log'
 executor_trace: '~/.local/share/llmvm/executor_trace.log'
-firefox_profile: '~/.mozilla/firefox/cp6sgb0s.selenium'
-firefox_download_directory: '~/.local/share/llmvm/download'
-firefox_cookies: '~/.local/share/llmvm/cookies.txt'
-firefox_headless: true
-chrome_headless: true
-chrome_cookies: '~/.local/share/llmvm/cookies.txt'
-smtp_server: 'localhost'
-smtp_port: 1025
-smtp_username: 'hello@hello.com'
-smtp_password: 'password'
+chromium_headless: true
+chromium_cookies: '~/.local/share/llmvm/cookies.txt'
 cache_directory: '~/.local/share/llmvm/cache'
 cdn_directory: '~/.local/share/llmvm/cdn'
 log_directory: '~/.local/share/llmvm/logs'
@@ -27,10 +19,7 @@ openai_max_tokens: 128000
 anthropic_api_base: 'https://api.anthropic.com'
 anthropic_model: 'claude-3-5-sonnet-20240620'
 anthropic_max_tokens: 200000
-local_api_base: 'http://localhost:8000/v1'
-local_model: 'llongorca.gguf'
-local_model_max_tokens: 16385
-executor: 'openai'  # openai, anthropic, local
+executor: 'openai'  # openai, anthropic
 helper_functions:
   - llmvm.server.bcl.BCL.datetime
   - llmvm.server.tools.webhelpers.WebHelpers.search_linkedin_profile
