--- a/requirements.txt
+++ b/requirements.txt
@@ -165,3 +165,4 @@ websockets==12.0 ; python_version >= "3.10" and python_version < "4.0"
 wheel==0.43.0 ; python_version >= "3.10" and python_version < "4.0"
 yarl==1.9.4 ; python_version >= "3.10" and python_version < "4.0"
 yfinance==0.2.40 ; python_version >= "3.10" and python_version < "4.0"
+dateparser==1.2.0 ; python_version >= "3.10" and python_version < "4.0"
